cmake_minimum_required(VERSION 3.12)
project(external-ceres)

option(CMAKE_VERBOSE_MAKEFILE "Verbosity" OFF)
option(GLOG_PREFER_EXPORTED_GLOG_CMAKE_CONFIGURATION        ""  TRUE)
option(EIGEN_PREFER_EXPORTED_EIGEN_CMAKE_CONFIGURATION      ""  TRUE)
option(GFLAGS_PREFER_EXPORTED_GFLAGS_CMAKE_CONFIGURATION    ""  TRUE)

message(STATUS "-DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}")
message(STATUS "-DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}")
message(STATUS "-DCMAKE_CXX_STANDARD_REQUIRED:BOOL=${CMAKE_CXX_STANDARD_REQUIRED}")
message(STATUS "-DCMAKE_CXX_EXTENSIONS:BOOL=${CMAKE_CXX_EXTENSIONS}")
message(STATUS "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
message(STATUS "-DCMAKE_CXX_FLAGS_INIT:STRING=${CMAKE_CXX_FLAGS}")
message(STATUS "-DCMAKE_CXX_FLAGS_RELEASE_INIT:STRING=${CMAKE_CXX_FLAGS_RELEASE}")
message(STATUS "-DCMAKE_CXX_FLAGS_DEBUG_INIT:STRING=${CMAKE_CXX_FLAGS_DEBUG}")
message(STATUS "-DCMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT:STRING=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
message(STATUS "-DCMAKE_CXX_FLAGS_MINSIZEREL_INIT:STRING=${CMAKE_CXX_FLAGS_MINSIZEREL}")
include(ExternalProject)
ExternalProject_Add(external_ceres
        GIT_REPOSITORY https://github.com/ceres-solver/ceres-solver.git
        GIT_TAG "e39d9ed1d60dfeb58dd2a0df4622c683f87b28e3"
        GIT_PROGRESS TRUE
        GIT_SHALLOW TRUE
        BUILD_ALWAYS TRUE # <- True will detect changes in dependencies of ceres
        PREFIX          ${CMAKE_BINARY_DIR}
        INSTALL_DIR     ${CMAKE_INSTALL_PREFIX}
        CMAKE_GENERATOR "CodeBlocks - Unix Makefiles"
        CMAKE_ARGS
        -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
        -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
        -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
        -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
        -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
        -DCMAKE_CXX_STANDARD_REQUIRED:BOOL=${CMAKE_CXX_STANDARD_REQUIRED}
        -DCMAKE_CXX_EXTENSIONS:BOOL=${CMAKE_CXX_EXTENSIONS}
        -DCMAKE_CXX_FLAGS_INIT:STRING=${CMAKE_CXX_FLAGS}  -fPIC
        -DCMAKE_CXX_FLAGS_RELEASE_INIT:STRING=${CMAKE_CXX_FLAGS_RELEASE}
        -DCMAKE_CXX_FLAGS_DEBUG_INIT:STRING=${CMAKE_CXX_FLAGS_DEBUG}
        -DCMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT:STRING=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}
        -DCMAKE_CXX_FLAGS_MINSIZEREL_INIT:STRING=${CMAKE_CXX_FLAGS_MINSIZEREL}
        -DCERES_THREADING_MODEL=NO_THREADS
        -DCMAKE_VERBOSE_MAKEFILE=${CMAKE_VERBOSE_MAKEFILE}
        -DBUILD_TESTING:BOOL=OFF
        -DBUILD_EXAMPLES:BOOL=OFF
        -DEigen3_DIR:PATH=${Eigen3_DIR}
        -Dglog_DIR:PATH=${glog_DIR}
        -Dgflags_DIR:PATH=${gflags_DIR}
        -DGFLAGS_LIBRARY:PATH=${GFLAGS_LIBRARY}
        -DGLOG_LIBRARY:PATH=${GLOG_LIBRARY}
        -DEIGEN_INCLUDE_DIR_HINTS:PATH=${EIGEN_INCLUDE_DIR_HINTS}
        -DGFLAGS_INCLUDE_DIR_HINTS:PATH=${GFLAGS_INCLUDE_DIR_HINTS}
        -DGFLAGS_LIBRARY_DIR_HINTS:PATH=${GFLAGS_LIBRARY_DIR_HINTS}
        -DGLOG_INCLUDE_DIR_HINTS:PATH=${GLOG_INCLUDE_DIR_HINTS}
        -DGLOG_LIBRARY_DIR_HINTS:PATH=${GLOG_LIBRARY_DIR_HINTS}
        -DGLOG_PREFER_EXPORTED_GLOG_CMAKE_CONFIGURATION:BOOL=${GLOG_PREFER_EXPORTED_GLOG_CMAKE_CONFIGURATION}
        -DEIGEN_PREFER_EXPORTED_EIGEN_CMAKE_CONFIGURATION:BOOL=${EIGEN_PREFER_EXPORTED_EIGEN_CMAKE_CONFIGURATION}
        -DGFLAGS_PREFER_EXPORTED_GFLAGS_CMAKE_CONFIGURATION:BOOL=${GFLAGS_PREFER_EXPORTED_GFLAGS_CMAKE_CONFIGURATION}
        -DLAPACK:BOOL=OFF
        -DEIGENSPARSE:BOOL=ON
        -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
        -DCMAKE_INSTALL_MESSAGE=NEVER #Avoid unnecessary output to console
        -DGFLAGS:BOOL=ON
        -DSUITESPARSE:BOOL=OFF
        -DCXSPARSE:BOOL=OFF
        -DSCHUR_SPECIALIZATIONS:BOOL=OFF
        -DCUSTOM_BLAS:BOOL=ON
        )