add_library(dmrg-debug-o OBJECT)
target_sources(dmrg-debug-o PRIVATE stacktrace.cpp)
target_link_libraries(dmrg-debug-o PUBLIC dmrg-deps dmrg-flags)
if (DMRG_ENABLE_PCH)
    target_precompile_headers(dmrg-debug-o REUSE_FROM dmrg-pch)
endif ()

add_library(dmrg-debug INTERFACE)
target_link_libraries(dmrg-debug INTERFACE $<TARGET_OBJECTS:dmrg-debug-o>)
target_link_libraries(dmrg-debug INTERFACE dmrg-deps dmrg-flags)
